Phase 4 of terminal-ui-plan completed